# pycounts

./: .devcontainer.json  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: conf.py  example.ipynb
src/pycounts/: __init__.py  plotting.py
tests/: test_pycounts.py
